--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -4,6 +4,7 @@ categories:
   - title: '🚀 Features'
     labels:
       - 'feature'
+      - 'breaking'
   - title: '🎈Enhancements'
     labels:
       - 'enhancement'
