--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -66,6 +66,9 @@ jobs:
             echo "Updating version to $NEW_VERSION"
             jq --arg version "$NEW_VERSION" '.version = $version' package.json > package.json.tmp
             mv package.json.tmp package.json
+            echo "Updating versin in package"
+            jq --arg version "$NEW_VERSION" '.version = $version' projects/ngx-treeview2/package.json > package.json.tmp2
+            mv package.json.tmp2 projects/ngx-treeview2/package.json
             echo "commit_required=true" >> $GITHUB_OUTPUT
             echo "version=$NEW_VERSION" >> $GITHUB_OUTPUT
           else
